--- a/eQueue/eQueue-war/web/kitchenManagement.xhtml
+++ b/eQueue/eQueue-war/web/kitchenManagement.xhtml
@@ -100,8 +100,9 @@
                 </h:form>
             </p:layoutUnit>
             <p:layoutUnit position="center" >
+                <p:growl id="infoGrowl" redisplay="false" life="2500" />
+
                 <h:form id="formCurrentDayOrders">
-                    <p:growl redisplay="false" life="2500" />
                     <p:dataGrid id="orders" value="#{kitchenManagementManagedBean.incompleteCustomerOrders}" var="order" columns="3" rows="9" paginator="true" 
                                 paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                 rowsPerPageTemplate="9,12,15" layout="grid">
@@ -141,12 +142,12 @@
                                         <f:setPropertyActionListener value="#{item}" target="#{kitchenManagementManagedBean.selectedOrderItem}" />
                                     </p:commandButton>
 
-                                    <p:commandButton rendered="#{item.status == 'ORDERED'}" update="@form formOrdersOverview" title="Prepare" icon="custom-icon cooking-icon" actionListener="#{kitchenManagementManagedBean.prepare}">
+                                    <p:commandButton rendered="#{item.status == 'ORDERED'}" update="@form formOrdersOverview infoGrowl" title="Prepare" icon="custom-icon cooking-icon" actionListener="#{kitchenManagementManagedBean.prepare}">
                                         <f:attribute name="orderItemToPrepare" value="#{item}" />
                                         <f:attribute name="order" value="#{order}"/>
                                     </p:commandButton>
 
-                                    <p:commandButton rendered="#{item.status == 'PREPARING'}" update="@form formOrdersOverview" title="Serve" icon="custom-icon serve-icon" actionListener="#{kitchenManagementManagedBean.serve}">
+                                    <p:commandButton rendered="#{item.status == 'PREPARING'}" update="@form formOrdersOverview infoGrowl" title="Serve" icon="custom-icon serve-icon" actionListener="#{kitchenManagementManagedBean.serve}">
                                         <f:attribute name="orderItemToServe" value="#{item}" />
                                         <f:attribute name="order" value="#{order}"/>
                                     </p:commandButton>
@@ -159,7 +160,7 @@
                             </p:contextMenu>
 
                             <br />
-                            <p:commandButton rendered="#{order.isAllServed == true}" update="@form formOrdersOverview" value="Complete" actionListener="#{kitchenManagementManagedBean.completeOrder}">
+                            <p:commandButton rendered="#{order.isAllServed == true}" update="@form formOrdersOverview infoGrowl" value="Complete" actionListener="#{kitchenManagementManagedBean.completeOrder}">
                                 <f:attribute name="orderToComplete" value="#{order}" />
                             </p:commandButton>
 
@@ -317,7 +318,7 @@
                             <p:row>
                                 <p:column colspan="2">
                                     <div style="text-align: center;">
-                                        <p:commandButton value="Update" update="@form formOrdersOverview formCurrentDayOrders" actionListener="#{kitchenManagementManagedBean.updateOrderLineItem}" oncomplete="PF('dialogUpdateOrderLineItem').show();" />
+                                        <p:commandButton value="Update" update="@form formOrdersOverview formCurrentDayOrders infoGrowl" actionListener="#{kitchenManagementManagedBean.updateOrderLineItem}" oncomplete="PF('dialogUpdateOrderLineItem').show();" />
                                         <p:commandButton value="Close" oncomplete="PF('dialogUpdateOrderLineItem').hide();" />
                                     </div>
                                 </p:column>
