--- a/eQueue/eQueue-war/web/homepage.xhtml
+++ b/eQueue/eQueue-war/web/homepage.xhtml
@@ -56,6 +56,17 @@
                             </h:panelGrid>
                         </p:panel>
                     </p:link>
+                    <p:link outcome="diningTableManagement-E.xhtml">
+                        <p:panel class="link-panel-container">
+                            <h:panelGrid>
+                                <span class="table-icon custom-icon-homepage"/>
+                                <div class="link-text-styling">
+                                    <p style="margin: 0">Table</p>
+                                    <p style="margin: 0">Mgmt_2</p>
+                                </div>
+                            </h:panelGrid>
+                        </p:panel>
+                    </p:link>
                     <p:link outcome="kitchenManagement.xhtml">
                         <p:panel class="link-panel-container">
                             <h:panelGrid>
