--- a/eQueue/eQueue-war/web/index.xhtml
+++ b/eQueue/eQueue-war/web/index.xhtml
@@ -13,7 +13,6 @@
                 background-size: cover;
                 background-repeat: no-repeat;
                 background-position: center;
-                //background-image: url(/eQueue-war/resources/images/walking.jpg);
             }
         </style>
     </h:head>
@@ -22,7 +21,7 @@
 
         <h:panelGroup rendered="#{sessionScope.employeeIsLogin == false}">       
             <h:form id="loginForm" style="float: right; height: 375px; width: 250px; text-align: center; margin: 10% 6.5%; background-color: linen;">
-                <p:graphicImage style="margin: 15px;" library="images" name="queue-logo.gif" height="135" width="76.05" alt="eQueue Login Form" />
+                <p:graphicImage library="images" name="equeue-logo.png" height="120" width="250" alt="eQueue Login Form" />
                 <p:inputText id="username" placeholder="USERNAME" value="#{employeeLoginManagedBean.username}" size="16" required="true" requiredMessage="Username is required" maxlength="32">
                     <f:validateLength minimum="4" />
                 </p:inputText>
